# pyconit-stats

./: .gitignore  PyCon_2024.ipynb  README.md  Stats.ipynb  colors.py  countries.py  pretix.py  pyproject.toml
stats/: analysis.py  pretix.py
