[tool.poetry]
name = "pyconit-stats"
version = "0.1.0"
description = ""
authors = ["Ester Beltrami <beltrami.ester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.3"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
